Added area based change detection workflow command line tool.

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,8 +1,8 @@
 [bumpversion]
-current_version = 0.0.2
+current_version = 0.0.1
 commit = True
 tag = True
 tag_name = {new_version}
 
 [bumpversion:file:setup.py]
-
+[bumpversion:file:gbdxcli/__init__.py]
